# template_cli_cpp

./: .clang-tidy  .cz.toml  .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  example.toml  pixi.toml
.zed/: debug.json  memo.md  settings.json  tasks.json
benches/: CMakeLists.txt  bench_csv.cpp  bench_json.cpp  bench_logger.cpp
cmake/: coverage.cmake  custom-targets.cmake  dependencies-app.cmake  dependencies-test.cmake  local-or-fetch.cmake  quality-setup.cmake  quality-tools.cmake
config/: example.json  example.toml  example.yaml
context/: _envrc  mise.toml
docs/: build-system.md  config-system-guide.md  config-system.md  csv-system-guide.md  output-system-guide.md  output-system.md
examples/: CMakeLists.txt  example_csv_wrapper.cpp  example_json_wrapper.cpp
include/command/: cli.hpp  cli_argparse_morris.hpp  cli_cli11.hpp  subcommand.hpp  subcommand_add.hpp  subcommand_argparse_morris.hpp  subcommand_cli11.hpp  subcommand_mul.hpp
include/config/: config_file_loader.hpp  config_loader.hpp  config_manager.hpp  config_schema.hpp
include/sut_example/: system_under_test.hpp
include/template_cli_cpp/logging/: logger.hpp  logger_factory.hpp  null_logger.hpp  spdlog_logger.hpp  test_logger.hpp
include/template_cli_cpp/output/: app_output.hpp  output_context.hpp
include/template_cli_cpp/recording/: data_recorder.hpp  null_recorder.hpp  recorder_factory.hpp  recorder_manager.hpp  spdlog_recorder.hpp
include/template_cli_cpp/utility/: csv_wrapper.hpp  yyjson_wrapper.hpp
include/utility/: yyjson_wrapper.hpp
src/: CMakeLists.txt  main.cpp  main_argparse_morris.cpp  main_cli11.cpp
src/command/: CMakeLists.txt  cli.cpp  cli_argparse_morris.cpp  cli_cli11.cpp  subcommand.cpp  subcommand_add.cpp  subcommand_argparse_morris.cpp  subcommand_cli11.cpp  subcommand_mul.cpp
src/config/: CMakeLists.txt  config_file_loader.cpp  config_loader.cpp  config_manager.cpp
src/sut_example/: system_under_test.cpp
tests/: .clang-tidy  CMakeLists.txt  test_config_manager.cpp  test_doctest_usage.cpp  test_sut_example.cpp  test_yyjson_wrapper.cpp
tests/cpp/: CMakeLists.txt  test_sut_example.cpp  test_toml.cpp
tests/support/: spy_logger.hpp  temp_file.hpp  test_doctest_usage.hpp
